# spreadhub-v2

./: .env.template  .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  dev  dev.ps1  pyproject.toml
backend/app/: __init__.py  main.py  test_pre_start.py  tests.py
backend/app/adapters/: appwrite.py  duckdb.py  redis.py
backend/app/api/: __init__.py  main.py
backend/app/api/routes/: home.py  spreadsheets.py
backend/app/auth/: clerkClient.py
backend/app/core/: config.py  db.py  services.py
backend/app/db_schema/: duckdb_schema.sql
backend/app/migrations/: export_redis.py  import_appwrite.py
backend/app/models/: api_models.py  cell_lock.py  models.py
backend/app/services/: sheets.py
backend/app/tests/: test_routes_spreadsheets.py
backend/scripts/: format.sh  test.sh
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: spreadsheetApi.ts
frontend/src/components/: Cell.tsx  Grid.tsx  LandingPage.tsx  SheetTabs.tsx  SpreadsheetEditor.tsx  Toolbar.tsx
frontend/src/types/: index.ts
frontend/src/utils/: cellUtils.ts
